--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.nodejs",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.ts"
   },
   "build": "rimraf ./build && tsc",
   "keywords": [],
@@ -12,9 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.3.1",
+    "eslint": "^7.30.0",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "@types/body-parser": "^1.19.1",
+    "@types/express": "^4.17.13",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
+  
 }
