--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
@@ -36,6 +36,7 @@
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   }
