models with sequelize auto

--- a/server/package.json
+++ b/server/package.json
@@ -36,8 +36,10 @@
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "latest": "^0.2.0",
     "mysql2": "^2.2.5",
     "pg": "^8.6.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.5",
+    "sequelize-auto": "^0.8.3"
   }
 }
