--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.35",
     "@types/express": "^4.17.11",
+    "@types/nodemailer": "^6.4.4",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -33,11 +36,15 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.6.0",
     "@types/pg": "^7.14.11",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "generate-password": "^1.6.1",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "latest": "^0.2.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "sequelize": "^6.6.5",
     "sequelize-auto": "^0.8.3"
