--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.35",
     "@types/express": "^4.17.11",
+    "@types/jwt-simple": "^0.5.33",
     "@types/nodemailer": "^6.4.4",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.3",
@@ -42,6 +43,7 @@
     "generate-password": "^1.6.1",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "latest": "^0.2.0",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.3",
