--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^15.6.0",
     "@types/pg": "^7.14.11",
     "bcrypt": "^5.0.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "generate-password": "^1.6.1",
@@ -47,6 +48,7 @@
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "sequelize": "^6.6.5",
-    "sequelize-auto": "^0.8.3"
+    "sequelize-auto": "^0.8.3",
+    "sequelize-auto-migrations": "^1.0.3"
   }
 }
