--- a/AppENNA/package.json
+++ b/AppENNA/package.json
@@ -30,7 +30,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.1",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
