--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.35",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/jwt-simple": "^0.5.33",
     "@types/nodemailer": "^6.4.4",
@@ -38,6 +39,9 @@
     "@types/node": "^15.6.0",
     "@types/pg": "^7.14.11",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
